--- a/elizabeth-oyler.html
+++ b/elizabeth-oyler.html
@@ -6,179 +6,44 @@
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
+  .prospect-hero { display:flex; flex-wrap:wrap; justify-content:space-between; gap:1.25rem; padding:1.75rem 1.25rem; border-radius:14px; background:#2E5084; color:#fff; margin-bottom:2rem;}
+  .prospect-name { font-family:'Archivo Black'; font-size:2rem; letter-spacing:.02em; margin:0 0 .25rem; text-transform:uppercase;}
+  .prospect-tagline { margin:0 0 .15rem; font-size:1rem; font-weight:600;}
+  .prospect-subtitle {margin:0; font-size:.9rem; opacity:.9;}
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  .prospect-grade-card { min-width:200px; padding:1rem 1.25rem; border-radius:12px; background:rgba(255,255,255,.15); border:1px solid rgba(255,255,255,.35); backdrop-filter:blur(4px);}
+  .grade-label{ font-size:.7rem; opacity:.8; text-transform:uppercase;}
+  .grade-score{ font-family:'Archivo Black'; font-size:2.2rem; margin:.15rem 0;}
+  .grade-tier{ font-size:.9rem; font-weight:600;}
+  .grade-note{ font-size:.75rem; opacity:.9;}
+  .recommendation-pill{ display:inline-flex; align-items:center; gap:5px; background:#fff; color:#2E5084; padding:4px 10px; border:1px solid #dce2ee; border-radius:30px; font-weight:600; font-size:.78rem; margin-top:.55rem; width:fit-content;}
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-green{background:#22c55e;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin:0 0 .7rem;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
-
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
-
-  @media (max-width: 640px) {
-    .prospect-hero {
-      flex-wrap: wrap;
-    }
-    .meta-list li {
-      flex-direction: column;
-      align-items: flex-start;
-    }
-    .meta-value {
-      text-align: left;
-      margin-left: 0;
-      margin-top: 0.1rem;
-    }
-  }
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} .section-list li{margin-bottom:.38rem;}
 </style>
 </head>
 
 <body>
 <div class="prospect-page">
 
-  <!-- HERO -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
+    <div>
       <h1 class="prospect-name">ELIZABETH OYLER</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Give-and-Go Leader · Investment Banking Track</p>
-      <p class="prospect-subtitle">WashU in St. Louis · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Give-and-Go Personality · Investment Banking Track</p>
+      <p class="prospect-subtitle">WashU in St. Louis · Swimming & Diving 🏊‍♀️ · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
@@ -186,12 +51,17 @@
       <div class="grade-score">99</div>
       <div class="grade-tier">Round 1 Candidate</div>
       <div class="grade-note">Elite reliability, emotional intelligence, and upside</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <span>Top Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- META -->
   <section class="prospect-meta">
-
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
@@ -199,7 +69,8 @@
         <li><span>Major</span><span class="meta-value">Psychology</span></li>
         <li><span>Minor</span><span class="meta-value">French</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
-        <li><span>Sport</span><span class="meta-value">Swimming &amp; Diving</span></li>
+        <li><span>GPA</span><span class="meta-value">3.77</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
         <li><span>Hometown</span><span class="meta-value">Chicago, IL</span></li>
       </ul>
     </div>
@@ -207,59 +78,38 @@
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1945.5</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">2 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">6 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">1 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            4. Give-and-Go<br>
-            (Dependable Personality · Emotional Support · Team Stability)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Servant Leader<br>
-            (Empathy · Service Orientation · People-First Support)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">2 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">96.5%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">98.6%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">85.8%</span></li>
+        <li><span>Personality</span><span class="meta-value">Give-and-Go (Empathetic, Collaborative)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Servant Leader (People-First, Team Support)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Cooperative (Inclusive, Team-First)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- OVERVIEW -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      One of the most special prospects in the entire Diamond League class. Elizabeth was the first to submit
-      every single MAP assignment — and uniquely completed all voluntary “Extra Rep” tasks, a rare indicator of
-      internal drive and professional maturity. Her rank already places her in the top 3, but her leadership
-      impact and consistency actually outperform that number by a wide margin.
+      One of the most special prospects in the entire Diamond League class. Elizabeth was the first to submit every single MAP assignment — and uniquely completed all voluntary “Extra Rep” tasks, a rare indicator of internal drive and professional maturity. Her rank already places her in the top 3, but her leadership impact and consistency actually outperform that number by a wide margin.
       <br><br>
-      As a Give-and-Go personality, she plays a stabilizing, emotionally intelligent role on any team — offering
-      support, resolving issues, and maintaining cohesion without seeking credit. Layer that with captain-level
-      leadership on the Guggenheim C&amp;R case, strong research experience, and a deep service portfolio, and
-      Elizabeth profiles as one of the highest-floor, highest-character early candidates across the MAP ecosystem.
+      As a Give-and-Go personality, she plays a stabilizing, emotionally intelligent role on any team — offering support, resolving issues, and maintaining cohesion without seeking credit. Layer that with captain-level leadership on the Guggenheim C&R case, strong research experience, and a deep service portfolio, and Elizabeth profiles as one of the highest-floor, highest-character early candidates across the MAP ecosystem.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Unmatched reliability:</strong> First to submit every assignment; completed all Extra Reps (extremely rare).</li>
-      <li><strong>Give-and-Go emotional intelligence:</strong> Stabilizes teams, supports peers, builds trust, and elevates morale.</li>
-      <li><strong>Leadership beyond rank:</strong> Captain of Diamond League C&amp;R team; execution and culture impact exceed her #2 finish.</li>
-      <li><strong>Academic excellence:</strong> 3.77 GPA with strong coursework in markets, statistics, and managerial environments.</li>
-      <li><strong>Research maturity:</strong> Psychology lab experience + entrepreneurship programs work at UChicago Polsky Center.</li>
-      <li><strong>Service-driven operator:</strong> DEI committee leadership, lifeguard supervisor roles, and youth programming.</li>
+      <li>Unmatched reliability: First to submit every assignment; completed all Extra Reps (extremely rare).</li>
+      <li>Give-and-Go emotional intelligence: Stabilizes teams, supports peers, builds trust, and elevates morale.</li>
+      <li>Leadership beyond rank: Captain of Diamond League C&R team; execution and culture impact exceed her #2 finish.</li>
+      <li>Academic excellence: 3.77 GPA with strong coursework in markets, statistics, and managerial environments.</li>
+      <li>Research maturity: Psychology lab experience + entrepreneurship programs work at UChicago Polsky Center.</li>
+      <li>Service-driven operator: DEI committee leadership, lifeguard supervisor roles, and youth programming.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
@@ -269,17 +119,15 @@
     </ul>
   </section>
 
-  <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A clear Round 1 MAP prospect — elite reliability, emotional intelligence, and leadership upside. Elizabeth’s
-      consistency, character, and execution make her the type of analyst candidates model themselves after. With
-      continued technical reps, she projects as a future culture-setter who will elevate any deal team from day one.
+      A clear Round 1 MAP prospect — elite reliability, emotional intelligence, and leadership upside. Elizabeth’s consistency, character, and execution make her the type of analyst candidates model themselves after. With continued technical reps, she projects as a future culture-setter who will elevate any deal team from day one.
     </p>
   </section>
 
 </div>
 </body>
 </html>
+
 
