--- a/ennika-carlson.html
+++ b/ennika-carlson.html
@@ -6,253 +6,113 @@
 
 <style>
   @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Montserrat:wght@300;400;500;600;700&display=swap');
+  body { margin:0; background:#f5f7fb; font-family:'Montserrat', sans-serif;}
+  .prospect-page { max-width:960px; margin:0 auto 3rem auto; padding:1.5rem 1rem; color:#1a1a1a;}
+  .prospect-hero { display:flex; flex-wrap:wrap; justify-content:space-between; gap:1.25rem; padding:1.75rem 1.25rem; border-radius:14px; background:#2E5084; color:#fff; margin-bottom:2rem;}
+  .prospect-name { font-family:'Archivo Black'; font-size:2rem; letter-spacing:.02em; margin:0 0 .25rem; text-transform:uppercase;}
+  .prospect-tagline { margin:0 0 .15rem; font-size:1rem; font-weight:600;}
+  .prospect-subtitle {margin:0; font-size:.9rem; opacity:.9;}
 
-  .prospect-page {
-    max-width: 960px;
-    margin: 0 auto 2.5rem auto;
-    font-family: 'Montserrat', sans-serif;
-    color: #1a1a1a;
-  }
+  .prospect-grade-card { min-width:200px; padding:1rem 1.25rem; border-radius:12px; background:rgba(255,255,255,.15); border:1px solid rgba(255,255,255,.35); backdrop-filter:blur(4px);}
+  .grade-label{ font-size:.7rem; opacity:.8; text-transform:uppercase;}
+  .grade-score{ font-family:'Archivo Black'; font-size:2.2rem; margin:.15rem 0;}
+  .grade-tier{ font-size:.9rem; font-weight:600;}
+  .grade-note{ font-size:.75rem; opacity:.9;}
+  .recommendation-pill{ display:inline-flex; align-items:center; gap:5px; background:#fff; color:#2E5084; padding:4px 10px; border:1px solid #dce2ee; border-radius:30px; font-weight:600; font-size:.78rem; margin-top:.55rem; width:fit-content;}
+  .pill-box{width:12px;height:12px;border-radius:3px;}
+  .pill-green{background:#22c55e;}
 
-  .prospect-hero {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    gap: 1.25rem;
-    padding: 1.5rem 1.25rem;
-    border-radius: 12px;
-    background: #2E5084;
-    color: #ffffff;
-    margin-bottom: 1.5rem;
-  }
+  .prospect-meta{display:flex;flex-wrap:wrap;gap:1.25rem;margin-bottom:2rem;}
+  .meta-column{flex:1 1 280px;background:#fff;border-radius:12px;padding:1rem 1.25rem;border:1px solid #dce2ee;}
+  .meta-title{font-family:'Archivo Black';font-size:.9rem;color:#2E5084;text-transform:uppercase;margin:0 0 .7rem;}
+  .meta-list{list-style:none;padding:0;margin:0;}
+  .meta-list li{display:flex;justify-content:space-between;padding:.28rem 0;border-bottom:1px dotted #e7eaf3;font-size:.87rem;}
+  .meta-value{text-align:right;margin-left:1rem;}
 
-  .prospect-name {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.85rem;
-    margin: 0 0 0.25rem;
-    letter-spacing: 0.02em;
-    text-transform: uppercase;
-  }
-
-  .prospect-tagline {
-    margin: 0 0 0.15rem;
-    font-size: 0.95rem;
-    font-weight: 600;
-  }
-
-  .prospect-subtitle {
-    margin: 0;
-    font-size: 0.85rem;
-    opacity: 0.9;
-  }
-
-  .prospect-grade-card {
-    min-width: 180px;
-    padding: 0.75rem 1rem;
-    border-radius: 10px;
-    background: rgba(255,255,255,0.15);
-    border: 1px solid rgba(255,255,255,0.3);
-    backdrop-filter: blur(4px);
-  }
-
-  .grade-label {
-    font-size: 0.7rem;
-    text-transform: uppercase;
-    opacity: 0.8;
-    margin-bottom: 0.25rem;
-  }
-
-  .grade-score {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 1.9rem;
-    margin-bottom: 0.1rem;
-  }
-
-  .grade-tier {
-    font-size: 0.8rem;
-    font-weight: 600;
-  }
-
-  .grade-note {
-    font-size: 0.75rem;
-    opacity: 0.85;
-  }
-
-  .prospect-meta {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 1rem;
-    margin-bottom: 1.5rem;
-  }
-
-  .meta-column {
-    flex: 1 1 260px;
-    background: #ffffff;
-    border-radius: 10px;
-    padding: 1rem 1.1rem;
-    border: 1px solid #dce2ee;
-  }
-
-  .meta-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.85rem;
-    text-transform: uppercase;
-    letter-spacing: 0.07em;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .meta-list {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-
-  .meta-list li {
-    display: flex;
-    justify-content: space-between;
-    padding: 0.2rem 0;
-    border-bottom: 1px dotted #e5e8f1;
-    font-size: 0.85rem;
-  }
-
-  .meta-value {
-    text-align: right;
-    margin-left: 1rem;
-  }
-
-  .prospect-section {
-    margin-bottom: 1.25rem;
-    padding: 1rem 1.1rem;
-    border-radius: 10px;
-    border: 1px solid #dce2ee;
-    background: #ffffff;
-  }
-
-  .section-title {
-    font-family: 'Archivo Black', sans-serif;
-    font-size: 0.9rem;
-    text-transform: uppercase;
-    color: #2E5084;
-    margin: 0 0 0.6rem;
-  }
-
-  .section-body {
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list {
-    padding-left: 1.1rem;
-    margin: 0;
-    font-size: 0.88rem;
-    line-height: 1.48;
-  }
-
-  .section-list li {
-    margin-bottom: 0.35rem;
-  }
+  .prospect-section{background:#fff;border-radius:12px;padding:1.15rem 1.35rem;border:1px solid #dce2ee;margin-bottom:1.4rem;}
+  .section-title{font-family:'Archivo Black';font-size:.95rem;color:#2E5084;text-transform:uppercase;margin-bottom:.65rem;}
+  .section-body{font-size:.9rem;line-height:1.52;}
+  .section-list{font-size:.9rem;line-height:1.52;padding-left:1.2rem;} .section-list li{margin-bottom:.38rem;}
 </style>
-
 </head>
-<body>
 
+<body>
 <div class="prospect-page">
 
-  <!-- HERO -->
   <section class="prospect-hero">
-    <div class="prospect-hero-main">
+    <div>
       <h1 class="prospect-name">ENNIKA CARLSON</h1>
-      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Two-Way Player Archetype · Investment Banking Track</p>
-      <p class="prospect-subtitle">Harvard University · Swimming &amp; Diving 🏊‍♀️ · Class of 2028</p>
+      <p class="prospect-tagline">⭐️⭐️⭐️⭐️⭐️ Prospect · Two-Way Player · Investment Banking Track</p>
+      <p class="prospect-subtitle">Harvard University · Swimming & Diving 🏊‍♀️ · Class of 2028</p>
     </div>
 
     <div class="prospect-grade-card">
       <div class="grade-label">MAP Prospect Grade</div>
       <div class="grade-score">97</div>
       <div class="grade-tier">Round 1 Candidate</div>
-      <div class="grade-note">Pro-ready maturity, elite EQ, captain-level leadership</div>
+      <div class="grade-note">Balanced EQ + execution with professional maturity</div>
+
+      <div class="recommendation-pill">
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <div class="pill-box pill-green"></div>
+        <span>Top Recommendation</span>
+      </div>
     </div>
   </section>
 
-  <!-- META -->
   <section class="prospect-meta">
-
-    <!-- Prospect Info -->
     <div class="meta-column">
       <h2 class="meta-title">Prospect Info</h2>
       <ul class="meta-list">
-        <li><span>College</span><span class="meta-value">Harvard University</span></li>
+        <li><span>School</span><span class="meta-value">Harvard University</span></li>
         <li><span>Major</span><span class="meta-value">Applied Mathematics</span></li>
         <li><span>Minor</span><span class="meta-value">N/A</span></li>
         <li><span>Year</span><span class="meta-value">2028</span></li>
         <li><span>GPA</span><span class="meta-value">3.52</span></li>
-        <li><span>Sport</span><span class="meta-value">Swimming &amp; Diving</span></li>
+        <li><span>Sport</span><span class="meta-value">Swimming & Diving</span></li>
         <li><span>Hometown</span><span class="meta-value">Dana Point, CA</span></li>
       </ul>
     </div>
 
-    <!-- MAP Profile -->
     <div class="meta-column">
       <h2 class="meta-title">MAP Profile</h2>
       <ul class="meta-list">
-        <li><span>Official Points</span><span class="meta-value">1766</span></li>
-        <li><span>Cumulative Rank</span><span class="meta-value">3 / 63</span></li>
-        <li><span>Phase 1 Rank</span><span class="meta-value">2 / 63</span></li>
-        <li><span>Phase 2 Rank</span><span class="meta-value">3 / 30</span></li>
-        <li>
-          <span>Personality</span>
-          <span class="meta-value">
-            14. Two-Way Player<br>
-            (Balanced Personality · Adaptive Communication · Coachable Consistency)
-          </span>
-        </li>
-        <li>
-          <span>Leadership</span>
-          <span class="meta-value">
-            Servant Leader<br>
-            (Empathy · Service Orientation · People-First Support)
-          </span>
-        </li>
+        <li><span>Fellowship Rank</span><span class="meta-value">3 / 78</span></li>
+        <li><span>Interview #1</span><span class="meta-value">97.6%</span></li>
+        <li><span>Interview #2</span><span class="meta-value">99.5%</span></li>
+        <li><span>Interview #3</span><span class="meta-value">90.4%</span></li>
+        <li><span>Personality</span><span class="meta-value">Two-Way Player (Adaptive, Socially Aware)</span></li>
+        <li><span>Leadership</span><span class="meta-value">Servant Leader (People-First, Team Support)</span></li>
+        <li><span>Teamwork</span><span class="meta-value">Cooperative (Inclusive, Team-First)</span></li>
       </ul>
     </div>
-
   </section>
 
-  <!-- OVERVIEW -->
   <section class="prospect-section">
     <h2 class="section-title">Overview</h2>
     <p class="section-body">
-      One of the most complete prospects in the MAP ecosystem — a polished, emotionally intelligent leader with
-      pro-ready presence and captain-level execution. Ennika finished #3 out of 63 in the Cumulative Rankings and
-      ranked top-3 in both Phase 1 and Phase 2, underscoring rare consistency across all MAP metrics.
+      One of the most complete prospects in the MAP ecosystem — a polished, emotionally intelligent leader with pro-ready presence and captain-level execution. Ennika finished #3 out of 63 in the Cumulative Rankings and ranked top-3 in both Phase 1 and Phase 2, underscoring rare consistency across all MAP metrics.
       <br><br>
-      As a Two-Way Player personality, she blends high-EQ relationship management with structured analytical execution.
-      Teammates frequently turn to her for judgment, stability, and conflict resolution — while coaches rely on her
-      maturity and communication instincts in the most complex team environments.
+      As a Two-Way Player personality, she blends high-EQ relationship management with structured analytical execution. Teammates frequently turn to her for judgment, stability, and conflict resolution — while coaches rely on her maturity and communication instincts in the most complex team environments.
       <br><br>
-      Professionally, she brings a multi-dimensional résumé: MAP x Guggenheim case leadership, commercial real estate
-      exposure through Berkshire Hathaway, cross-cultural teaching experience in Vietnam, long-term mentorship roles,
-      and entrepreneurship. Layered with Division I athletics and national diving accolades, she embodies the exact
-      early-career profile top firms seek: grounded, poised, reliable, and unshakably team-oriented.
+      Professionally, she brings a multi-dimensional résumé: MAP x Guggenheim case leadership, commercial real estate exposure through Berkshire Hathaway, cross-cultural teaching experience in Vietnam, long-term mentorship roles, and entrepreneurship. Layered with Division I athletics and national diving accolades, she embodies the exact early-career profile top firms seek: grounded, poised, reliable, and unshakably team-oriented.
     </p>
   </section>
 
-  <!-- STRENGTHS -->
   <section class="prospect-section">
     <h2 class="section-title">Strengths</h2>
     <ul class="section-list">
-      <li><strong>Elite emotional intelligence:</strong> Trusted team stabilizer; reads group dynamics with uncommon maturity.</li>
-      <li><strong>Two-Way versatility:</strong> Balances analytical execution with polished communication and EQ.</li>
-      <li><strong>MAP excellence:</strong> Top-3 in all major rankings; consistent captain-level performance.</li>
-      <li><strong>Professional readiness:</strong> Berkshire Hathaway real estate + MAP banking leadership.</li>
-      <li><strong>Service-driven:</strong> Guide Dogs of America ambassador; teacher and mentor in Vietnam.</li>
-      <li><strong>Long-term leadership:</strong> Multi-year educator; entrepreneur; piano discipline; dog-training initiative.</li>
-      <li><strong>High athletic pedigree:</strong> 5× Junior National Finalist; D1 athlete balancing rigorous training demands.</li>
+      <li>Elite emotional intelligence: Trusted team stabilizer; reads group dynamics with uncommon maturity.</li>
+      <li>Two-Way versatility: Balances analytical execution with polished communication and EQ.</li>
+      <li>MAP excellence: Top-3 in all major rankings; consistent captain-level performance.</li>
+      <li>Professional readiness: Berkshire Hathaway real estate + MAP banking leadership.</li>
+      <li>Service-driven: Guide Dogs of America ambassador; teacher and mentor in Vietnam.</li>
+      <li>Long-term leadership: Multi-year educator; entrepreneur; piano discipline; dog-training initiative.</li>
+      <li>High athletic pedigree: 5× Junior National Finalist; D1 athlete balancing rigorous training demands.</li>
     </ul>
   </section>
 
-  <!-- AREAS FOR DEVELOPMENT -->
   <section class="prospect-section">
     <h2 class="section-title">Areas for Development</h2>
     <ul class="section-list">
@@ -261,17 +121,14 @@
     </ul>
   </section>
 
-  <!-- PROJECTION -->
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A pro-ready Round 1 MAP prospect with elite EQ, servant-leadership instincts, and a uniquely balanced Two-Way
-      Player profile. Ennika brings immediate cultural value and long-term leadership potential to any analyst class,
-      projecting as one of the most dependable and complete candidates in the 2028 pipeline.
+      A pro-ready Round 1 MAP prospect with elite EQ, servant-leadership instincts, and a uniquely balanced Two-Way Player profile. Ennika brings immediate cultural value and long-term leadership potential to any analyst class, projecting as one of the most dependable and complete candidates in the 2028 pipeline.
     </p>
   </section>
 
 </div>
-
 </body>
 </html>
+
