--- a/madeleine-cole.html
+++ b/madeleine-cole.html
@@ -98,7 +98,7 @@
       <br><br>
       As a Diamond League Captain, she handled the responsibility well, though she occasionally struggled more than typical captains to keep pace with team-level bandwidth demands. Even so, she delivered clean valuation work, led high-quality analyses in the Point72 competition, and earned rare “hire within 24 hours” ratings across superday-style mock interviews — a genuine sign of front-office readiness.
       <br><br>
-      Madeleine’s combination of GPA, communication, resilience, and work rate creates a compelling Round 2–3 prospect with clear potential to rise into Round 1 territory as her team-based efficiency sharpens.
+      Madeleine’s combination of GPA, communication, resilience, and work rate creates a compelling Round 1–2 prospect with clear potential to rise deeper into top-tier consideration as her team-based efficiency sharpens.
     </p>
   </section>
 
@@ -127,11 +127,12 @@
   <section class="prospect-section">
     <h2 class="section-title">Projection</h2>
     <p class="section-body">
-      A strong Round 2–3 prospect with the discipline, intellect, and communication needed to succeed in competitive recruiting pipelines. Madeleine’s high GPA, fast-learning Hustler profile, and willingness to ask the right questions form a powerful foundation — and as her team-based execution sharpens, she projects as a future top-of-class performer capable of thriving in front-office environments.
+      A strong Round 1–2 MAP prospect with the discipline, intellect, and communication foundation to succeed in competitive IB recruiting. Madeleine's academic strength, fast-learning Hustler profile, and proactive approach to clarification create a high-upside trajectory — and as her team-based execution speed sharpens, she is well-positioned to rise into top-tier pipelines. With continued reps in fast-cycle environments, she projects as a future front-office contributor capable of outperforming peers through consistency, work ethic, and resilience.
     </p>
   </section>
 
 </div>
 </body>
 </html>
+
 
